--- a/daftarisimateri.html
+++ b/daftarisimateri.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async custom-element="amp-auto-ads"
-        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-</script>
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWKYNJM30L"></script>
     <script>
@@ -35,8 +33,7 @@
         align-items: center;
       }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
-    crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971" crossorigin="anonymous"></script>
   </head>
   <body id="home">
     <!-- navbar start -->
@@ -89,30 +86,31 @@
               <button type="button" class="list-group-item list-group-item-action">Fungsi Kuadrat</button>
               <button type="button" class="list-group-item list-group-item-action">Pertidaksamaan Linear Dua Variabel</button>
               <button type="button" class="list-group-item list-group-item-action">Program Linear</button>
-                  <!-- Start Matriks -->
+              <!-- Start Matriks -->
               <button class="btn list-group-item list-group-item-action fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapsematriks" aria-expanded="false" aria-controls="collapsematriks">
-                  Matriks Dasar & Operasi Matriks
-                </button>
+                Matriks Dasar & Operasi Matriks
+              </button>
               <div class="collapse" id="collapsematriks">
                 <div class="card card-body">
                   <ul class="list-group">
-                   <a href="/kumpulanMateri/matriks/" style="text-decoration: none;"> <li class="list-group-item">Materi</li> </a>
-                   <a href="/kumpulanSoal/matriks/" style="text-decoration: none;"> <li class="list-group-item">Soal Latihan</li> </a>
-                   <a href="/soalUlangan/matriks/" style="text-decoration: none;"> <li class="list-group-item">Soal Ulangan</li> </a>
+                    <a href="/kumpulanMateri/matriks/" style="text-decoration: none"> <li class="list-group-item">Materi</li> </a>
+                    <a href="/kumpulanSoal/matriks/" style="text-decoration: none"> <li class="list-group-item">Soal Latihan</li> </a>
+                    <a href="/soalUlangan/matriks/" style="text-decoration: none"> <li class="list-group-item">Soal Ulangan</li> </a>
+                    <a href="/soalUlangan/matriks/susulan.html" style="text-decoration: none"> <li class="list-group-item">Soal Susulan</li> </a>
                   </ul>
                 </div>
               </div>
               <!-- end Matriks -->
-                  <!-- Start Transformasi -->
+              <!-- Start Transformasi -->
               <button class="btn list-group-item list-group-item-action fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapsetransformasi" aria-expanded="false" aria-controls="collapsetransformasi">
-                  Transformasi Geometri
-                </button>
+                Transformasi Geometri
+              </button>
               <div class="collapse" id="collapsetransformasi">
                 <div class="card card-body">
                   <ul class="list-group">
-                   <a href="/kumpulanMateri/transformasi/" style="text-decoration: none;"> <li class="list-group-item">Materi</li> </a>
-                   <a href="/kumpulanSoal/transformasiGeometri/" style="text-decoration: none;"> <li class="list-group-item">Soal Latihan</li> </a>
-                   <a href="/soalUlangan/transformasiGeometri/" style="text-decoration: none;"> <li class="list-group-item">Soal Ulangan</li> </a>
+                    <a href="/kumpulanMateri/transformasi/" style="text-decoration: none"> <li class="list-group-item">Materi</li> </a>
+                    <a href="/kumpulanSoal/transformasiGeometri/" style="text-decoration: none"> <li class="list-group-item">Soal Latihan</li> </a>
+                    <a href="/soalUlangan/transformasiGeometri/" style="text-decoration: none"> <li class="list-group-item">Soal Ulangan</li> </a>
                   </ul>
                 </div>
               </div>
@@ -177,8 +175,6 @@
     </footer>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <amp-auto-ads type="adsense"
-    data-ad-client="ca-pub-4649430696681971">
-</amp-auto-ads>
+    <amp-auto-ads type="adsense" data-ad-client="ca-pub-4649430696681971"> </amp-auto-ads>
   </body>
 </html>
